--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "smalot/pdfparser",
-    "description": "Pdf parser library. Can read and extract information from pdf file.",
+    "name": "mdoteu/pdfparser",
+    "description": "Fork of Smalot's Pdf parser library with modifications.",
     "keywords": ["PDF", "text", "parser", "parse", "extract"],
     "type": "library",
     "license": "LGPL-3.0",
@@ -8,12 +8,12 @@
         {
             "name": "Sebastien MALOT",
             "email": "sebastien@malot.fr"
-        }
+        },
     ],
     "support": {
-        "issues": "https://github.com/smalot/pdfparser/issues"
+        "issues": "https://github.com/MDOTEU/pdfparser/issues"
     },
-    "homepage": "https://www.pdfparser.org",
+    "homepage": "https://github.com/MDOTEU/pdfparser",
     "require": {
         "php": ">=7.1",
         "symfony/polyfill-mbstring": "^1.18",
@@ -21,8 +21,8 @@
         "ext-iconv": "*"
     },
     "autoload": {
-        "psr-0": {
-            "Smalot\\PdfParser\\": "src/"
+        "psr-4": {
+            "MDOTEU\\PdfParser\\": "src/"
         }
     },
     "autoload-dev": {
